# PyTango-tutorial

./: .gitignore  Device_AS_twin.py  LICENSE  README.md  pyproject.toml  tutorial_device.ipynb
Autoscript-min-Pytango/: AS_commands.txt  README.md
Autoscript-min-Pytango/llm-context/: AS-15-corpus.jsonl  Pytango-10.1.2-corpus.jsonl
Autoscript-min-Pytango/notebooks/: 1_Client_tutorial.ipynb  2_Client_AS.ipynb  Client.ipynb
Autoscript-min-Pytango/src/: Microscope.py
Autoscript-min-Pytango/src/acquistion/: advanced_acquisition.py
Autoscript-min-Pytango/src/detectors/: BF.py  HAADF.py
Autoscript-min-Pytango/tests/: Conftest.py  test_microscope.py
Autoscript-min-Pytango/tests/test_detectors/: test_HAADF.py
SIngle_Mic_device/: Device_AS_twin.py
async-tutorial/: Concurrency_vs_Parallelism_CheatSheet.ipynb  asyncio_client.ipynb  asyncio_device_server.py  gevent_device_server.py  gevent_or_asyncio.ipynb
detectors_as_device/: tango_servers.py  tutorial_pytango.ipynb
